syntax = "proto3";

option csharp_namespace = "AttrectoTest.Common.Grpc.Notification";

package notifcation;

service NotificationService {
    rpc Ping (PingRequest) returns (PingResponse);  
    rpc SendRegistrationEmail (RegistrationEmailRequest) returns (NotificationResponse);
    rpc SendFeedNotification (FeedNotificationRequest) returns (NotificationResponse);
}

message PingRequest {

}

message PingResponse {
    bool success = 1;
}

message RegistrationEmailRequest {
  string userId = 1;
}

message FeedNotificationRequest {
  string fromUserId = 1;
  string toUserId = 2;
  string feedId = 3;
  string type = 4; // "like" or "comment"
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}
